--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <link rel="stylesheet" href="css/logo.css">
 
   <script src="js/footerYear.js"></script>
-  <script src="js/jquery.js"></script><!-- TODO: Bootstrap's JavaScript requires jQuery version 1.9.1 or higher, but lower than version 3 -->
+  <script src="js/jquery.js"></script>
   <script src="bootstrap336/js/bootstrap.min.js"></script>
-  <script src="js/angular12.js" type="text/javascript"></script>
-  <script src="js/angular_form.js" type="text/javascript"></script>
+  <script src="js/angular12.js"></script>
+  <script src="js/angular-route.js"></script>
+  <script src="js/angular_form.js"></script>
 </head>
 
 <body ng-app="AngularSubmitForm" ng-controller="FormController" >
@@ -26,10 +27,10 @@
       <nav>
         <ul class="nav nav-justified">
           <!-- <li class="active"><a href="#">Home</a></li> --><!-- TODO:  -->
-          <li><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-screenshot"></span> Car Finder</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-globe"></span> Directions</a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-info-sign"></span> Contact Us</a></li>
+          <li><a href="#/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+          <li><a href="#car_finder"><span class="glyphicon glyphicon-screenshot"></span> Car Finder</a></li>
+          <li><a href="#directions"><span class="glyphicon glyphicon-globe"></span> Directions</a></li>
+          <li><a href="#contact"><span class="glyphicon glyphicon-info-sign"></span> Contact Us</a></li>
         </ul>
       </nav>
     </div>
@@ -40,7 +41,7 @@
     </div>
 
     <!-- angular app -->
-    <div ng-include src="'partials/form.html'"></div>
+    <div ng-view></div>
 
   </div>
 
